
2021-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_get_sig_name, cob_get_sig_description,
	  cob_set_sig_description): hardened against unexpected signal numbers
	* common.c (signals, cob_get_sig_description): description is
	  post-initialized to allow use of gettext - non-static descriptions

2021-11-14  Ron Norman <rjn@inglenet.com>

	* common.h: Add prototype for BIT-WISE cob_logical_xxx functions
	* numeric.c: Add code for the BIT-WISE cob_logical_xxx functions
	* intrinsic.c (cob_intr_binop): add code for the BIT-WISE operations
	* common.h, call.c: allow removal of longjump by defining COB_WITHOUT_JMP

2021-11-10  Ron Norman <rjn@inglenet.com>

	* fileio.c: Test code for bug #604 but not sure if it should be

2021-11-08  Ron Norman <rjn@inglenet.com>

	* common.h: Add feature flag COB_FILE_LS_DEFAULT
	* fileio.c: improvments to WRITE ADVANCING for SEQUENTIAL file

2021-11-06  Ron Norman <rjn@inglenet.com>

	* common.h: Add COB_SET_SEQUENTIAL, COB_SET_ADVANCING
	* fileio.c: improvments to WRITE ADVANCING for SEQUENTIAL file

2021-11-06  Ron Norman <rjn@inglenet.com>

	* common.h: Add COB_LINE_ADVANCE, COB_RECORD_ADVANCE
	* fileio.c: For SEQUENTIAL with COB_RECORD_ADVANCE, insert
				blank records for WRITE ADVANCING 

2021-11-05  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_allocate): fixed check for maximum size to work as
	  intended for values > INT_MAX
	* common.h [HAVE_CONFIG_H]: include config.h (to be moved to coblocal.h)
	* common.h [COB_64_BIT_POINTER]: allow field size up to 2GB
	* intrinsic.c [HAVE_LANGINFO_CODESET && _WIN32]: fix compile error,
	  needs to be checked later if undefine of HAVE_LANGINFO_CODESET is
	  reasonable

2021-10-26  Ron Norman <rjn@inglenet.com>

	* common.h: Fields added to cob_file for MF style LINE ADVANCING files
	* fileio.c: Updates to create more MF format LINE ADVANCING SEQUENTIAL
	            Becomes default when -ffile-format=mf

2021-10-22  Ron Norman <rjn@inglenet.com>
